--- a/index.html
+++ b/index.html
@@ -7,14 +7,17 @@
     <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js" crossorigin="">
     </script>
   <style>
-    html, body {
-      height: 99%;
-    }
-
-    #map{
-      height: 100%;
-    }
+  body {
+    padding: 0;
+    margin: 0;
+  }
+  html, body, #map {
+    height: 100%;
+    width: 100vw;
+  }
   </style>
+
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
   </head>
 
